--- a/3d-music-player/package.json
+++ b/3d-music-player/package.json
@@ -13,6 +13,7 @@
     "vite": "^6.2.0"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^25.0.0",
     "lodash-es": "^4.17.21",
     "three": "^0.175.0"
   }
