--- a/threejs-editor/package.json
+++ b/threejs-editor/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "antd": "^5.24.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
